@@ -121,6 +121,8 @@ dpkg (1.17.0) UNRELEASED; urgency=low
   * Add support for mipsn32(el) and mips64(el) to arch tables.
     Thanks to YunQiang Su <wzssyqa@gmail.com>. Closes: #685096, #707323
   * Document --file and --label parser options in dpkg-parsechangelog(1).
+  * Add a new configure --with-dpkg-deb-compressor option to allow selecting
+    the default dpkg-deb compressor, mainly for downstreams.
 
   [ Updated programs translations ]
   * Fix typo in Spanish translation of update-alternatives.
